src/test/ui/imports/unused-imports-in-test-module.stderr
error: unused import: `std::io::BufRead`
  --> $DIR/unused-imports-in-test-module.rs:3:5
   |
LL | use std::io::BufRead;
   |     ^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/unused-imports-in-test-module.rs:1:9
   |
LL | #![deny(unused_imports)]
   |         ^^^^^^^^^^^^^^

error: unused import: `super::a`
  --> $DIR/unused-imports-in-test-module.rs:9:9
   |
LL |     use super::a;
   |         ^^^^^^^^
   |
help: consider adding a `#[cfg(test)]` to the containing module
  --> $DIR/unused-imports-in-test-module.rs:8:1
   |
LL | mod test {
   | ^^^^^^^^

error: unused import: `crate::b`
  --> $DIR/unused-imports-in-test-module.rs:12:13
   |
LL |         use crate::b;
   |             ^^^^^^^^
   |
help: consider adding a `#[cfg(test)]` to the containing module
  --> $DIR/unused-imports-in-test-module.rs:8:1
   |
LL | mod test {
   | ^^^^^^^^

error: unused import: `super::a`
  --> $DIR/unused-imports-in-test-module.rs:17:9
   |
LL |     use super::a;
   |         ^^^^^^^^
   |
help: consider adding a `#[cfg(test)]` to the containing module
  --> $DIR/unused-imports-in-test-module.rs:16:1
   |
LL | mod tests {
   | ^^^^^^^^^

error: unused import: `crate::b`
  --> $DIR/unused-imports-in-test-module.rs:20:13
   |
LL |         use crate::b;
   |             ^^^^^^^^
   |
help: consider adding a `#[cfg(test)]` to the containing module
  --> $DIR/unused-imports-in-test-module.rs:16:1
   |
LL | mod tests {
   | ^^^^^^^^^

error: unused import: `super::a`
  --> $DIR/unused-imports-in-test-module.rs:25:9
   |
LL |     use super::a;
   |         ^^^^^^^^
   |
help: consider adding a `#[cfg(test)]` to the containing module
  --> $DIR/unused-imports-in-test-module.rs:24:1
   |
LL | mod test_a {
   | ^^^^^^^^^^

error: unused import: `crate::b`
  --> $DIR/unused-imports-in-test-module.rs:28:13
   |
LL |         use crate::b;
   |             ^^^^^^^^
   |
help: consider adding a `#[cfg(test)]` to the containing module
  --> $DIR/unused-imports-in-test-module.rs:24:1
   |
LL | mod test_a {
   | ^^^^^^^^^^

error: unused import: `super::a`
  --> $DIR/unused-imports-in-test-module.rs:33:9
   |
LL |     use super::a;
   |         ^^^^^^^^
   |
help: consider adding a `#[cfg(test)]` to the containing module
  --> $DIR/unused-imports-in-test-module.rs:32:1
   |
LL | mod a_test {
   | ^^^^^^^^^^

error: unused import: `crate::b`
  --> $DIR/unused-imports-in-test-module.rs:36:13
   |
LL |         use crate::b;
   |             ^^^^^^^^
   |
help: consider adding a `#[cfg(test)]` to the containing module
  --> $DIR/unused-imports-in-test-module.rs:32:1
   |
LL | mod a_test {
   | ^^^^^^^^^^

error: unused import: `super::a`
  --> $DIR/unused-imports-in-test-module.rs:41:9
   |
LL |     use super::a;
   |         ^^^^^^^^
   |
help: consider adding a `#[cfg(test)]` to the containing module
  --> $DIR/unused-imports-in-test-module.rs:40:1
   |
LL | mod tests_a {
   | ^^^^^^^^^^^

error: unused import: `crate::b`
  --> $DIR/unused-imports-in-test-module.rs:44:13
   |
LL |         use crate::b;
   |             ^^^^^^^^
   |
help: consider adding a `#[cfg(test)]` to the containing module
  --> $DIR/unused-imports-in-test-module.rs:40:1
   |
LL | mod tests_a {
   | ^^^^^^^^^^^

error: unused import: `super::a`
  --> $DIR/unused-imports-in-test-module.rs:49:9
   |
LL |     use super::a;
   |         ^^^^^^^^
   |
help: consider adding a `#[cfg(test)]` to the containing module
  --> $DIR/unused-imports-in-test-module.rs:48:1
   |
LL | mod a_tests {
   | ^^^^^^^^^^^

error: unused import: `crate::b`
  --> $DIR/unused-imports-in-test-module.rs:52:13
   |
LL |         use crate::b;
   |             ^^^^^^^^
   |
help: consider adding a `#[cfg(test)]` to the containing module
  --> $DIR/unused-imports-in-test-module.rs:48:1
   |
LL | mod a_tests {
   | ^^^^^^^^^^^

error: unused import: `super::a`
  --> $DIR/unused-imports-in-test-module.rs:57:9
   |
LL |     use super::a;
   |         ^^^^^^^^

error: unused import: `crate::b`
  --> $DIR/unused-imports-in-test-module.rs:60:13
   |
LL |         use crate::b;
   |             ^^^^^^^^

error: aborting due to 15 previous errors

